tests/snapshots/examples_fixtures/io__aoc_day1_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day1_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/io/aoc_day1_haskell_style.flx:34:9
   |
34 |         0 - distance
   |         ^^^^^^^^^^^^
   |         ------------ this expression has type `Int and Option<Int>`

   |         ------------ operator operands are known at compile time

Note:
  expected type: numeric operands (Int or Float)
  found type: Int and Option<Int>

Help:
  These two types are not compatible.
  adjust operand types or add explicit conversion


error[E004]: Undefined Variable

I can't find a value named `parse_rotations`.

  examples/io/aoc_day1_haskell_style.flx:43:9
   |
43 |         parse_rotations(rest, acc)
   |         ^^^^^^^^^^^^^^^

Hint:
  Define it first: let parse_rotations = ...;

Help:
  Did you mean `parse_rotation`?

Found 2 errors.
== stdout ==
<not executed>
